fix for deque